# GravComp

./: .gitignore  README.md  temp.m
c++/install/: main.sh
c++/src/grav_comp/: CMakeLists.txt  package.xml
install/: install_frilibrary.sh  main.sh
matlab/: grav_comp_test.m
src/ft_sensors/ati/ati_sensor_description/: CMakeLists.txt  package.xml
src/ft_sensors/ati/ati_sensor_description/meshes/: ati_mini_40_complete.STL
src/ft_sensors/ati/ati_sensor_description/urdf/: ati_sensor.xacro  ati_sensor_phri_tool.xacro
src/grav_comp/: CMakeLists.txt  package.xml
src/grav_comp/data/: CoM.txt  CoM.yaml  CoM2.yaml  CoM4.yaml  CoM5.yaml  CoM6.yaml  bhand_nescafeCylinder_massCoM.yaml  bhand_woodbox_massCoM.yaml  data.txt  data.yaml  predef_poses.yaml
src/grav_comp/launch/: grav_comp.launch
src/grav_comp/meshes/: car_starter.stl  kol_casing.stl  kol_finger.stl
src/grav_comp/plot/: plotExecResults.m  plot_data.m
src/grav_comp/rviz/: lwr4p_robot.rviz  ur_test.rviz
src/grav_comp/src/: main.cpp
src/grav_comp/urdf/: gripper.xacro  lwr4pRobot_mini40_phriTool.xacro  table.xacro  (+7 more)
src/lib/gui_lib/: CMakeLists.txt  package.xml
src/lib/gui_lib/include/gui_lib/: label_lineEdit.h  utils.h  view_jpos_dialog.h  view_pose_dialog.h  view_wrench_dialog.h
src/lib/gui_lib/src/: label_lineEdit.cpp  utils.cpp  view_jpos_dialog.cpp  view_pose_dialog.cpp  view_wrench_dialog.cpp
src/robots/ur/ur_robot/: CMakeLists.txt  package.xml
src/robots/ur/ur_robot/include/ur_robot/: robot.h  robot_arm.h  sim_robot.h
src/robots/ur/ur_robot/src/: robot.cpp  sim_robot.cpp  utils.cpp
(+118 files in other folders)
