<?xml version="1.0"?>
<package>
  <name>gui_lib</name>
  <version>0.0.0</version>
  <description>The gui_lib package</description>

  <maintainer email="antosidi646@gmail.com">Slifer64</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
