<?xml version="1.0"?>
<package format="2">
  <name>ati_sensor_description</name>
  <version>1.0.0</version>
  <description>The ati_sensor_description package</description>

  <maintainer email="thprapav@gmail.com">fao</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
