<?xml version="1.0"?>
<package>
  <name>ur_robot</name>
  <version>0.0.0</version>
  <description>ur_robot_api</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ur_modern_driver</build_depend>
  <run_depend>ur_modern_driver</run_depend>

  <build_depend>orocos_kdl</build_depend>
  <run_depend>orocos_kdl</run_depend>

<!--  <build_depend>ur_kinematics</build_depend>-->
<!--  <run_depend>ur_kinematics</run_depend>-->

<export></export>

</package>
